[package]
name = "multiple_of_16"
version = "0.1.0"
authors = ["ocboogie <boogie@mikulec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.2", git = "https://github.com/gfx-rs/wgpu-rs" }

shaderc = "0.6.1"

[features]
default = ["vulkan"]
vulkan = ["wgpu/vulkan"]
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
